[package]
name = "vec3"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["vec3", "vector", "3"]
description = "rust vector 3 functions"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-vec3.git"
homepage = "https://github.com/nathanfaucett/rs-vec3"

[dependencies.num]
git = "https://github.com/nathanfaucett/rs-num.git"
[dependencies.approx]
git = "https://github.com/nathanfaucett/rs-approx.git"
